--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,10 @@
 .container {
   padding: 1rem;
+  display: flex; 
+  justify-content: center; 
+  align-items: center;  
+  height: 100vh;         
+  text-align: center;      
 }
 
 .title {
@@ -9,12 +14,6 @@
 }
 
 .welcome {
-  position: absolute;
-  width: 433px;
-  height: 31px;
-  left: 869px;
-  top: 525px;
-  
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
