--- a/styles/FilterMenu.module.css
+++ b/styles/FilterMenu.module.css
@@ -6,7 +6,10 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 6px;
   padding: 1rem;
-  z-index: 1;
+  position: absolute;
+  top: 70%;
+  left: 0;
+  z-index: 10;
 }
 
 .filter-menu-header {
