--- a/styles/FilterMenu.module.css
+++ b/styles/FilterMenu.module.css
@@ -35,7 +35,7 @@
 
 
 .title {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
@@ -59,7 +59,7 @@
 }
 
 .title {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
@@ -72,7 +72,7 @@
 }
 
 .status-row {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -96,7 +96,7 @@
   position: absolute;
   width: 90%;
   height: 45px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-weight: 600;
   font-size: 16px;
   line-height: 19px;
